<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akashungarala.task_manager.AddFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_name_label"
                android:textStyle="bold"
                android:textColor="@color/colorHigh"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="3dp" />

            <EditText
                android:id="@+id/etTaskName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/task_name_hint"
                android:textColorHint="@color/colorGreen"
                android:textColor="@color/colorGreen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTaskPriorityLevel"
            android:layout_below="@+id/llTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_priority_level_label"
                android:textStyle="bold"
                android:textColor="@color/colorHigh"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="3dp" />

            <Spinner
                android:id="@+id/sTaskPriorityLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTaskStatus"
            android:layout_below="@+id/llTaskPriorityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_status_label"
                android:textStyle="bold"
                android:textColor="@color/colorHigh"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="3dp" />

            <Spinner
                android:id="@+id/sTaskStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTaskDueDate"
            android:layout_below="@+id/llTaskStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_due_date_label"
                android:textStyle="bold"
                android:textColor="@color/colorHigh"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="3dp" />

            <TextView
                android:id="@+id/tvTaskDueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorGreen"
                android:padding="3dp" />

            <Button
                android:id="@+id/btnTaskDueDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/task_due_date_button"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/colorGreen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTaskNotes"
            android:layout_below="@+id/llTaskDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_notes_label"
                android:textStyle="bold"
                android:textColor="@color/colorHigh"
                android:textAppearance="?android:textAppearanceMedium"
                android:padding="3dp" />

            <EditText
                android:id="@+id/etTaskNotes"
                android:inputType="textMultiLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/task_notes_hint"
                android:textColorHint="@color/colorGreen"
                android:textColor="@color/colorGreen" />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/colorGreen"
                android:layout_margin="3dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/cancel_button"
                android:textColor="@color/colorWhite"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/colorGreen"
                android:layout_margin="3dp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>